--- a/style.css
+++ b/style.css
@@ -7,12 +7,42 @@ body{
     width: 100%;
     height: 70px;
     background-color: #303030;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #BABABA;
 }
 
 #principal a {
-    font-size: 25px;
+    font-size: 16px;
     font-weight: 600;
     color: white;
     text-decoration: none;
     font-family: 'Inter';
+}
+
+    #principal a:hover{
+        color: #CCCCCC;
+    }
+
+#menu{
+    display: flex;
+    width: 45%;
+    justify-content: space-around;
+    align-items: center;
+    margin-left: 5%;
+}
+
+#principal button{
+    margin-right: 5%;
+    background-color: #0C70F2;
+    border: 0px;
+    height: 35px;
+    width: 70px;
+    color: white;
+    font-family: 'inter';
+    font-size: 15px;
+    font-weight: 600;
+    box-shadow: 3px 2px 4px #0C70F240;
+
 }
