--- a/style.css
+++ b/style.css
@@ -5,12 +5,20 @@ body{
     background-repeat: no-repeat;
 }
 
+:root{
+    --azul-dnc: #0C70F2;
+    --preto-dnc: #303030;
+    --cinza-hover: #C9C9C9;
+
+    --fonte-padrao: 'Inter';
+}
+
 /* MENU DE NAVEGAÇÃO PRINCIPAL */
 
 #principal{
     width: 100%;
     height: 70px;
-    background-color: #303030;
+    background-color: var(--preto-dnc);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -22,11 +30,11 @@ body{
         font-weight: 600;
         color: white;
         text-decoration: none;
-        font-family: 'Inter';
+        font-family: var(--fonte-padrao);
     }
 
     #principal a:hover{
-        color: #CCCCCC;
+        color: var(--cinza-hover);
     }
 
     #menu{
@@ -39,14 +47,52 @@ body{
 
     #principal button{
         margin-right: 5%;
-        background-color: #0C70F2;
+        background-color: var(--azul-dnc);
         border: 0px;
         height: 35px;
         width: 70px;
         color: white;
-        font-family: 'inter';
+        font-family: var(--fonte-padrao);
         font-size: 15px;
         font-weight: 600;
         box-shadow: 3px 2px 4px #0C70F240;
         cursor: pointer;
+    }
+
+    /* SEÇÃO PRINCIPAL DO SITE */
+
+    section{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        margin-top: 100px;
+        margin-bottom: 100px;
+    }
+
+    header{
+        color: white;
+        font-family: var(--fonte-padrao);
+    }
+
+    header h1{
+        text-transform: uppercase;
+        font-size: 40px;
+        font-weight: 800;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    header h2{
+        text-align: center;
+        font-size: 25px;
+        font-weight: 500;
+        margin-bottom: 60px;
+    }
+
+    header .inverter_fundo{
+        background-color: black;
+        font-weight: bold;
+        padding: 1px;
+        margin: 5px;
     }
