--- a/style.css
+++ b/style.css
@@ -96,3 +96,67 @@ body{
         padding: 1px;
         margin: 5px;
     }
+
+    /* FORMULÁRIO  */
+
+    form{
+        color: white;
+        font-family: var(--fonte-padrao);
+        font-size: 20px;
+        font-weight: 500;
+        width: 600px;
+    }
+
+    .form-group{
+        display: flex;
+        flex-direction: column;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    form input{
+        height: 20px;
+        background: rgba(255, 255, 255, 0.9);
+        border-radius: 10px;
+        border: 0px;
+        font-size: 15px;
+        padding: 10px;
+    }
+        form input::placeholder{
+            color: rgba(57, 57, 57, 0.5);
+        }
+
+    form label{
+        margin: 10px 0px 10px 0px;
+    }
+
+    .checkbox-itens label{
+        font-size: 20px;
+        margin: 0; /* Remove margens padrão */
+        display: flex;
+        align-items: center; /* Alinha o texto verticalmente com o checkbox */
+    }
+    
+    .checkbox-itens{
+        display: flex;
+        flex-direction: row; /* Ou 'row' se preferir uma linha */
+        gap: 10px; /* Espaçamento entre itens */
+    }
+
+    input[type="checkbox"] {
+        transform: scale(1.7);
+        margin-right: 5px; /* Ajuste conforme necessário */
+    }
+
+    input[type="submit"]{
+        background-color: rgba(12, 112, 242, 0.9);
+        width: 100%;
+        height: 56px;
+        font-size: 25px;
+        font-weight: 500;
+        color: white;
+        font-family: var(--fonte-padrao);
+        margin-top: 60px;
+        box-shadow: 0px 6px 4px rgba(12, 112, 242, 0.25);
+        cursor: pointer;
+    }
